syntax = "proto3";
package DecentralCardGame.cardchain.cardchain;

import "gogoproto/gogo.proto";
import "DecentralCardGame/cardchain/cardchain/params.proto";
import "DecentralCardGame/cardchain/cardchain/card.proto";
import "DecentralCardGame/cardchain/cardchain/user.proto";
import "DecentralCardGame/cardchain/cardchain/match.proto";
import "DecentralCardGame/cardchain/cardchain/collection.proto";
import "DecentralCardGame/cardchain/cardchain/sell_offer.proto";
import "DecentralCardGame/cardchain/cardchain/running_average.proto";
import "DecentralCardGame/cardchain/cardchain/council.proto";
import "DecentralCardGame/cardchain/cardchain/image.proto";
import "DecentralCardGame/cardchain/cardchain/server.proto";
import "cosmos/base/v1beta1/coin.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/DecentralCardGame/Cardchain/x/cardchain/types";

// GenesisState defines the cardchain module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Card cardRecords = 2;
  repeated User users = 3;
  repeated string addresses = 4;
  repeated Match matches = 6;
  repeated Collection collections = 7;
  repeated SellOffer sellOffers = 8;
  repeated cosmos.base.v1beta1.Coin pools = 9;
  string cardAuctionPrice = 11 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"];;
  repeated Council councils = 12;
  repeated RunningAverage RunningAverages = 13;
  repeated Image images = 14;
  repeated Server Servers = 15;
  TimeStamp lastCardModified = 16;
  // this line is used by starport scaffolding # genesis/proto/state
}
